<resources>
    <string name="app_name">Analyzer</string>
    <string name="settings_menu_title">Settings</string>
    <string name="title_balance_label">Баланс</string>
    <string name="title_tariff_label">Тариф</string>
    <string name="title_traffic_label">Использовано трафика</string>
    <string name="title_tariffs">Тарифы</string>
    <string name="title_events">События</string>
    <string name="details_calls_label">ЗВОНКИ</string>
    <string name="details_sms_label">СМС</string>
    <string name="to_detail">TO_DETAL</string>
    <string name="to_calls">TO_CALLS</string>
    <string name="to_sms">TO_SMS</string>
    <string name="to_settings">TO_SETTINGS</string>
    <string name="details">Детализация</string>
    <string name="tariffs_fragment_label">Наиболее выгодные тарифы</string>
    <string name="to_tariffs">TO_TARIFFS</string>
    <string name="api_url">https://static.brbrroman.ru/tariffs/example.json</string>
    <string name="tariffs">Тарифы</string>
    <string name="no_permission_granted_message">No permission granted on </string>
    <string name="receive_error_message">Can not receive data from content provider with URI </string>
    <string name="empty_sms_history_message">No sms in history</string>
    <string name="empty_calls_history_message">No calls in history</string>
    <string name="time_format">dd/MM/yyyy ss/mm/hh</string>
    <string name="tariff_profit">Итоговая выгода от смены тарифа:</string>
    <string name="tariff_new">Новый</string>
    <string name="tariff_current">Текущий</string>
    <string name="MTC">MTS</string>
    <string name="Yota">Yota</string>
    <string name="Beeline">Beeline</string>
    <string name="no_profit">Нет выгоды!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="number_not_rec">"Номер не указан"</string>
    <string name="operator_not_rec">Оператор не указан</string>
    <string name="tariff_not_rec">Тариф не указан</string>
</resources>
