<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diff_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

   <TextView
       android:id="@+id/diff_current"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="50dp"
       android:layout_marginTop="50dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/toolbar"
       android:textSize="17sp"
       android:text="@string/tariff_current"/>

    <TextView
        android:id="@+id/diff_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:textSize="17sp"
        android:text="@string/tariff_new"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_left"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/diff_current"
        app:layout_constraintLeft_toLeftOf="@+id/diff_current"
        app:layout_constraintRight_toRightOf="@+id/diff_current">

        <TextView
            android:id="@+id/diff_oper_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textColor="@android:color/black"
            android:layout_marginVertical="24pt"
            android:textSize="14pt"
            tools:text="МТС"/>

        <View
            android:id="@+id/diff_oper_icon_left"
            android:layout_width="match_parent"
            android:layout_height="12pt"
            android:layout_gravity="center|top"
            tools:background="@color/colorPrimary"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diff_tariff_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                tools:text="Безлимитный"/>

            <TextView
                android:id="@+id/diff_gb_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="20 ГБ"/>

            <TextView
                android:id="@+id/diff_sms_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="200 смс"/>

            <TextView
                android:id="@+id/diff_price_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="650 р/мес"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_right"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/diff_new"
        app:layout_constraintLeft_toLeftOf="@+id/diff_new"
        app:layout_constraintRight_toRightOf="@+id/diff_new">

        <TextView
            android:id="@+id/diff_oper_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textColor="@android:color/black"
            android:layout_marginVertical="24pt"
            android:textSize="14pt"
            tools:text="Билайн"/>

        <View
            android:id="@+id/diff_oper_icon_right"
            android:layout_width="match_parent"
            android:layout_height="12pt"
            android:layout_gravity="center|top"
            tools:background="@color/colorAccent"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diff_tariff_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                tools:text="Билайновский"/>

            <TextView
                android:id="@+id/diff_gb_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="30 ГБ"/>

            <TextView
                android:id="@+id/diff_sms_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="400 смс"/>

            <TextView
                android:id="@+id/diff_price_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="750 р/мес"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/diff_profit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textSize="17sp"
            android:text="@string/tariff_profit"/>

        <TextView
            android:id="@+id/diff_profit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            tools:text="230 р/мес" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
